--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Hugo theme for technical documentation.",
   "main": "none.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "get:submodule": "git submodule update --init --depth 1",
+      "_prepare:docsy": "cd themes/docsy && npm install",
+      "prepare": "npm run get:submodule && npm run _prepare:docsy"
   },
   "repository": {
     "type": "git",
