Choose docsy as theme

--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,7 @@ defaultContentLanguageInSubdir = false
 enableMissingTranslationPlaceholders = true
 enableRobotsTXT = true
 enableGitInfo = true
+theme = "docsy"
 
 [taxonomies]
 tag = ""
