--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -48,6 +48,9 @@ jobs:
       - name: Build
         run: hugo --minify
 
+      - name: Copy Front Page
+        run: cp -av frontpage/ public/
+
       - name: Upload build artifact
         uses: actions/upload-pages-artifact@v1
         with:
