--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "tech-doc-hugo",
-  "version": "0.0.1",
-  "description": "Hugo theme for technical documentation.",
+  "name": "kcp-documenation",
+  "version": "0.8",
+  "description": "kcp documentation",
   "main": "none.js",
   "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "get:submodule": "git submodule update --init --depth 1",
-      "_prepare:docsy": "cd themes/docsy && npm install",
-      "prepare": "npm run get:submodule && npm run _prepare:docsy"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "get:submodule": "git submodule update --init --depth 1",
+    "_prepare:docsy": "cd themes/docsy && npm install",
+    "prepare": "npm run get:submodule && npm run _prepare:docsy"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/google/docsy-example.git"
+    "url": "git+https://github.com/kcp-dev/kcp-dev.github.io.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/google/docsy-example/issues"
+    "url": "https://github.com/kcp-dev/kcp-dev.github.io/issues"
   },
-  "homepage": "https://github.com/google/docsy-example#readme",
+  "homepage": "https://github.com/kcp-dev/kcp#readme",
   "devDependencies": {
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "^10.4.12",
     "postcss": "^8.3.7",
-    "postcss-cli": "^9.0.2"
+    "postcss-cli": "^9.1.0"
   }
 }
