add multi-project chapters and crd reference generator
- add support for multi-project chapters
- add crd reference generator using https://github.com/giantswarm/crd-docs-generator
- update GitHub Actions to use the new crd-docs-generator
- add missing CSS rules
- add template for linking relative markdown files

Signed-off-by: Avinal Kumar <avinal@redhat.com>

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -44,6 +45,9 @@ jobs:
             ${{ runner.os }}-node-
       - run: npm install
       - run: npm ci
+
+      - name: Generate CRD reference docs
+        run: ./scripts/crd-ref-gen/run-crd-ref-gen.sh
 
       - name: Build
         run: hugo --minify
