--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kcp-documenation",
+  "name": "kcp-documentation",
   "version": "0.8",
   "description": "kcp documentation",
   "main": "none.js",
