--- a/config.toml
+++ b/config.toml
@@ -127,7 +127,7 @@ disable = false
 [[menu.main]]
 name = "Documentation"
 weight = -1000
-url = "/kcp/main"
+url = "https://docs.kcp.io/kcp/main"
 [[menu.main]]
 name = "GitHub"
 weight = -99
