Use correct baseURL for kcp.io
Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://kcp-dev.github.io/'
+baseURL = 'https://kcp.io'
 contentDir = "content/en"
 defaultContentLanguage = "en"
 defaultContentLanguageInSubdir = false
