Add site description to title of home page
Signed-off-by: Marvin Beckers <mail@embik.me>

--- a/config.toml
+++ b/config.toml
@@ -46,7 +46,7 @@ title = 'kcp.io'
 languageName = "English"
 weight = 1
 [languages.en.params]
-description = "kcp documentation"
+description = "Horizontally Scalable Control Plane for Kubernetes APIs"
 
 [markup]
 [markup.goldmark]
