Update version references to v0.22
Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/config.toml
+++ b/config.toml
@@ -58,7 +58,7 @@ style = "monokai"
 guessSyntax = "true"
 
 [params]
-copyright = "2021-2023. The kcp Authors"
+copyright = "2021-2024. The kcp Authors"
 footer_note = "Kubernetes and the Kubernetes logo are registered trademarks of The Linux Foundation® (TLF)."
 footer_cncf_show = true
 footer_cncf_note = "We are a Cloud Native Computing Foundation sandbox project."
@@ -81,7 +81,7 @@ prism_syntax_highlighting = false
 [[menu.main]]
 name = "Documentation"
 weight = -1000
-url = "https://docs.kcp.io/kcp/main"
+url = "https://docs.kcp.io/kcp/v0.22"
 [[menu.main]]
 name = "GitHub"
 weight = -99
