--- a/data/home/data.yaml
+++ b/data/home/data.yaml
@@ -19,31 +19,33 @@ video:
   description: "Why Kubernetes is Inappropriate for Platforms, and How to Make it Better. @ KubeCon + CloudNativeCon EU 2024"
 
 goals:
-  - title: "Kubernetes at its Core. No Fork. No Fragmentation."
+  - title: "Multi-Tenancy for Peace of Mind."
     text: |-
-      kcp takes full advantage of Kubernetes API conventions, the glue that binds the cloud-native technology ecosystem together and imbues Kubernetes popular end-user experience, but kcp has unbound it from Kubernetes workload orchestration and clusters.
+      kcp implements fully-isolated workspaces, each acting as its own Kubernetes-like cluster, with its own URL endpoint, its own set of APIs (e.g. different CRDs), its own RBAC, but as cheap and quick as a namespace.
+  - title: "APIs as a Service."
+    text: |-
+      kcp extends Kubernetes' CRD extension model to an API export mechanism optimized for SaaS service providers offering APIs to thousands or many tens of thousands of user workspaces -- Securely and efficiently.
+  - title: "Building Block, Not Walled Garden."
+    text: |-
+      kcp does not replace Kubernetes, but complements it as a backend to host Kubernetes-like APIs as SaaS. Connect whatever service your teams need by writing an operator that understands kcp. Operate Kubernetes clusters from kcp as central control plane.
+  - title: "Work at Global Scale."
+    text: |-
+      kcp schedules workspaces to kcp instances called shards, similarly to pods get scheduled to nodes. Our ambitions are to eventually reach 1 million workspaces and 10,000 shards.
+  - title: "Beyond Compute."
+    text: |-
+      kcp intentionally only knows generic APIs, no pods or related resources. Our goal is to build a control plane for form factors beyond container orchestration.
+
+      Platform Engineering needs more than just workload orchestration to provide good developer experience. kcp allows building higher level APIs to provide to developers, data analysts and other end users.
+  - title: "Based on Kubernetes. Not a Fork."
+    text: |-
+      kcp takes full advantage of Kubernetes API conventions, the glue that binds the Cloud Native Native technology ecosystem together and imbues Kubernetes' popular end-user experience.
       
       One rule that is set in stone: kcp exposes 100% pure Kubernetes APIs by using the latest Kubernetes releases as the basis.
 
       We live and breath Kubernetes and the community. No compromises.
-  - title: "Massive Multi-Tenancy"
-    text: |-
-      kcp implements fully-isolated workspaces, each acting as its own Kubernetes-like cluster, with its own URL, its own set of APIs (e.g. different CRDs), its own RBAC, but as cheap and quick as a namespace
-  - title: "APIs as a Service"
-    text: |-
-      kcp extends Kube’s CRD extension model to an API export mechanism optimized for SaaS service providers offering APIs to thousands or many tens of thousands of user workspaces. Securely and efficiently.
-  - title: "Open - No Walled Garden"
-    text: |-
-      kcp does not replace Kubernetes, but complements it. As a global control plane to inter-connect Kubernetes clusters. As a backend to host Kubernetes APIs as SaaS to any Kubernetes on any platform and any cloud provider, natively.
-  - title: "Horizontally Scalable"
-    text: |-
-      kcp schedules workspaces to shared apiservers (the shards), similarly to pods scheduled to nodes and containers on a node sharing a Linux kernel. Our ambitions are to eventually reach 1 million workspaces and 10,000 shards.
-  - title: "Beyond Compute – Where are the Pods?"
-    text: |-
-      kcp intentionally only knows generic APIs, no pods or related resources. Transparent-multi-cluster is an experimental kcp add-on to re-add some of Kube’s workload APIs, but reshaped to offer shared compute capacity making users forget about clusters and nodes.
 
 community:
-  title: "We Love Collaboration"
+  title: "We ❤️ Collaboration"
   text: |-
     We develop kcp completely in the open. Everybody is welcome to help making the vision of kcp reality.
 
