Link to 'latest' alias on docs.kcp.io
Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/config.toml
+++ b/config.toml
@@ -81,7 +81,7 @@ prism_syntax_highlighting = false
 [[menu.main]]
 name = "Documentation"
 weight = -1000
-url = "https://docs.kcp.io/kcp/v0.23"
+url = "https://docs.kcp.io/kcp/latest"
 [[menu.main]]
 name = "GitHub"
 weight = -99
