Add the KubeCon EU 2025 blog post
On-behalf-of: @SAP marko.mudrinic@sap.com
Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

--- a/data/authors.yaml
+++ b/data/authors.yaml
@@ -4,3 +4,9 @@
     socials:
       github: https://github.com/embik
       linkedin: https://www.linkedin.com/in/marvinbeckers/
+  - name: Marko Mudrinić
+    title: Senior Software Engineer at Kubermatic
+    picture: /images/authors/marko_mudrinic.jpeg
+    socials:
+      github: https://github.com/xmudrii
+      linkedin: https://www.linkedin.com/in/xmudrii/
