--- a/data/home/data.yaml
+++ b/data/home/data.yaml
@@ -27,7 +27,7 @@ goals:
       kcp extends Kubernetes' CRD extension model to an API export mechanism optimized for SaaS service providers offering APIs to thousands or many tens of thousands of user workspaces -- Securely and efficiently.
   - title: "Building Block, Not Walled Garden."
     text: |-
-      kcp does not replace Kubernetes, but complements it as a backend to host Kubernetes-like APIs as SaaS. It's a flexible framework for building platforms.
+      kcp does not replace Kubernetes, but compliments it as a backend to host Kubernetes-like APIs as SaaS. It's a flexible framework for building platforms.
   - title: "Work at Global Scale."
     text: |-
       kcp schedules workspaces to kcp instances called shards, similarly to pods get scheduled to nodes. Our ambitions are to eventually reach 1 million workspaces and 10,000 shards.
